--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <header class="header"><h1>DOOM FIRE</h1></header>
     <div class="doom-fire" doom-fire></div>
     <div class="controlers">
+      <button id="intensity-lower" class="intensity">-</button>
       <button id="toggle-debug">Debug Mode</button>
+      <button id="intensity-add" class="intensity">+</button>
     </div>
     <script src="src/js/libs/jquery.min.js"></script>
-    <script src="src/js/assets/fire.js"></script>
+    <script src="src/js/assets/fire/index.js"></script>
+    <script src="src/js/pages/configureDoomFire.js"></script>
   </body>
 </html>
